set(FeatureSource crack.cpp enrichmentRing.cpp inclusion3d.cpp sample3d.cpp crackinitiation.cpp  expansiveRing.cpp inclusion.cpp sample.cpp enrichmentbehaviour.cpp expansiveZone3d.cpp layeredinclusion.cpp vibratingcircularmembrane.cpp enrichmentInclusion3d.cpp expansiveZone.cpp pore3d.cpp  enrichmentInclusion.cpp features.cpp pore.cpp crack.h enrichmentRing.h inclusion3d.h sample3d.h crackinitiation.h  expansiveRing.h inclusion.h sample.h enrichmentbehaviour.h expansiveZone3d.h layeredinclusion.h vibratingcircularmembrane.h enrichmentInclusion3d.h expansiveZone.h pore3d.h  enrichmentInclusion.h features.h pore.h)
add_library (AmieFeatures ${FeatureSource})
