set(SolverSource assembly.cpp biconjugategradientstabilized.cpp choleskidecomposed.cpp conjugategradient.cpp eigenvalues.cpp gausseidell.cpp gaussseidellstep.cpp incompletecholeskidecomposition.cpp inversediagonal.cpp polakribiereconjugategradient.cpp  preconditionners.cpp solver.cpp tridiagonal.cpp assembly.h biconjugategradientstabilized.h choleskidecomposed.h conjugategradient.h eigenvalues.h gausseidell.h gaussseidellstep.h incompletecholeskidecomposition.h inversediagonal.h polakribiereconjugategradient.h  preconditionners.h solver.h tridiagonal.h)
add_library (AmieSolver ${SolverSource})